# SARVAM_AI

./: .gitattributes  .gitignore  Dockerfile  README.md  deploy_v7_final.py  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  test_oracle_diag.py
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: Card.jsx  Chart.jsx  DataOrb.jsx  Footer.jsx  Layout.jsx  Navbar.jsx  Sidebar.jsx
client/src/context/: SidebarContext.jsx
client/src/hooks/: useAuth.js  useTemporalAnchor.js
client/src/pages/: About.jsx  CareerRoadmap.jsx  ChatCoach.jsx  CodeOracle.jsx  Cookies.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  Planner.jsx  Privacy.jsx  ResumeAnalyzer.jsx  TemporalAnchor.jsx  Terms.jsx
client/src/services/: api.js
client/src/utils/: anchorUtils.js  helpers.js
server/: Dockerfile  app.py  requirements.txt  start.ps1
server/agent/: core.py
server/api/: main.py
server/api/routes/: ai_services.py  auth.py  career.py  dashboard.py  env.py  history.py  openenv.py
server/database/: core.py  temporal_anchor.py
server/env/: logic.py  sarvam_env.py  schemas.py
server/models/: schemas.py
server/scripts/: create_user.py  inference.py
server/services/: ai_service.py  analytics.py  emotion.py  skill_analysis.py  socket_manager.py
